Change structure and init
